added "save to server" button
